Creado mediante Colaboratory

--- a/VisionPorComputadoras/final-lab_2019.ipynb
+++ b/VisionPorComputadoras/final-lab_2019.ipynb
@@ -186,7 +186,6 @@
         "import warnings\n",
         "\n",
         "from IPython.display import SVG\n",
-        "from keras.datasets import fashion_mnist\n",
         "from keras.layers import Dense, Flatten, Conv2D, Dropout, MaxPooling2D\n",
         "from keras.models import Sequential\n",
         "from keras.utils import plot_model, to_categorical\n",
@@ -230,10 +229,99 @@
       "metadata": {
         "id": "kHg-oIFaJgcJ",
         "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "ea7a6e63-4e37-42a2-cf7c-8d99b8b35857"
+      },
+      "source": [
+        "labels = pd.read_pickle(\"train-jpg-labels.pkl\")\n",
+        "labels.head()"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>image_name</th>\n",
+              "      <th>tags</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>train-jpg/train_0.jpg</td>\n",
+              "      <td>[haze, primary]</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>train-jpg/train_1.jpg</td>\n",
+              "      <td>[agriculture, clear, primary, water]</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>train-jpg/train_2.jpg</td>\n",
+              "      <td>[clear, primary]</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>train-jpg/train_3.jpg</td>\n",
+              "      <td>[clear, primary]</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>train-jpg/train_4.jpg</td>\n",
+              "      <td>[agriculture, clear, habitation, primary, road]</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "              image_name                                             tags\n",
+              "0  train-jpg/train_0.jpg                                  [haze, primary]\n",
+              "1  train-jpg/train_1.jpg             [agriculture, clear, primary, water]\n",
+              "2  train-jpg/train_2.jpg                                 [clear, primary]\n",
+              "3  train-jpg/train_3.jpg                                 [clear, primary]\n",
+              "4  train-jpg/train_4.jpg  [agriculture, clear, habitation, primary, road]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wrqVrR5tOzIY",
+        "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "flow_from_dataframe(labels)"
       ],
       "execution_count": 0,
       "outputs": []
