Creado mediante Colaboratory

--- a/VisionPorComputadoras/final-lab_2019.ipynb
+++ b/VisionPorComputadoras/final-lab_2019.ipynb
@@ -229,17 +229,17 @@
       "metadata": {
         "id": "kHg-oIFaJgcJ",
         "colab_type": "code",
+        "outputId": "ea7a6e63-4e37-42a2-cf7c-8d99b8b35857",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "ea7a6e63-4e37-42a2-cf7c-8d99b8b35857"
+        }
       },
       "source": [
         "labels = pd.read_pickle(\"train-jpg-labels.pkl\")\n",
         "labels.head()"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -318,13 +318,40 @@
       "metadata": {
         "id": "wrqVrR5tOzIY",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "51e5cfe6-7dd5-44cb-ccea-b0516b4b3667"
       },
       "source": [
-        "flow_from_dataframe(labels)"
+        "mpimg.imread('train-jpg/train_0.jpg').shape"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(256, 256, 4)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FjnvmrgHXmYT",
+        "colab_type": "text"
+      },
+      "source": [
+        "Las imagenes son de 256x256 y son de 4 canales: RGB (3) y Escala de grises (1)"
+      ]
     },
     {
       "cell_type": "markdown",
