Creado mediante Colaboratory

--- a/VisionPorComputadoras/final-lab_2019.ipynb
+++ b/VisionPorComputadoras/final-lab_2019.ipynb
@@ -197,6 +197,7 @@
         "import numpy as np\n",
         "import pandas as pd\n",
         "import seaborn as sns\n",
+        "from collections import Counter\n",
         "\n",
         "warnings.filterwarnings('ignore')\n",
         "%matplotlib inline"
@@ -310,6 +311,153 @@
             "tags": []
           },
           "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "apr68LtRX8Z0",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 576
+        },
+        "outputId": "dda25f65-2f3c-4245-da0f-853e7713e2ed"
+      },
+      "source": [
+        "tags = []\n",
+        "for tag in labels.tags:\n",
+        "  tags.extend(tag)\n",
+        "tag_ctr = Counter(tags)\n",
+        "tags_ctr = pd.DataFrame.from_dict(tag_ctr, orient=\"index\", columns=[\"counter\"])\n",
+        "tags_ctr"
+      ],
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>counter</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>haze</th>\n",
+              "      <td>2697</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>primary</th>\n",
+              "      <td>37513</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>agriculture</th>\n",
+              "      <td>12315</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>clear</th>\n",
+              "      <td>28431</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>water</th>\n",
+              "      <td>7411</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>habitation</th>\n",
+              "      <td>3660</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>road</th>\n",
+              "      <td>8071</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>cultivation</th>\n",
+              "      <td>4547</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>slash_burn</th>\n",
+              "      <td>209</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>cloudy</th>\n",
+              "      <td>2089</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>partly_cloudy</th>\n",
+              "      <td>7261</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>conventional_mine</th>\n",
+              "      <td>100</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>bare_ground</th>\n",
+              "      <td>862</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>artisinal_mine</th>\n",
+              "      <td>339</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>blooming</th>\n",
+              "      <td>332</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>selective_logging</th>\n",
+              "      <td>340</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>blow_down</th>\n",
+              "      <td>101</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                   counter\n",
+              "haze                  2697\n",
+              "primary              37513\n",
+              "agriculture          12315\n",
+              "clear                28431\n",
+              "water                 7411\n",
+              "habitation            3660\n",
+              "road                  8071\n",
+              "cultivation           4547\n",
+              "slash_burn             209\n",
+              "cloudy                2089\n",
+              "partly_cloudy         7261\n",
+              "conventional_mine      100\n",
+              "bare_ground            862\n",
+              "artisinal_mine         339\n",
+              "blooming               332\n",
+              "selective_logging      340\n",
+              "blow_down              101"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 60
         }
       ]
     },
